web layer implemented with few minor fixes pending.

--- a/Stock/src/main/resources/ApplicationResources.properties
+++ b/Stock/src/main/resources/ApplicationResources.properties
@@ -178,3 +178,19 @@ activeUsers.fullName=Full Name
 # JSF-only messages, remove if not using JSF
 javax.faces.component.UIInput.REQUIRED=This is a required field.
 activeUsers.summary={0} User(s) found, displaying {1} user(s), from {2} to {3}. Page {4} / {5}
+
+# Stock
+stock.user.story=Stock U1 & U2
+stock.heading=Stock App
+stock.title=Stock App
+stock.message=Welcome to Stock App
+stock.new.quote=New Stock Quote
+stock.enter.ticker=Enter valid Stock ticker symbol below.
+stock.show.db.stocks=Show saved Stock Quotes
+button.submit=Submit
+stock.list.heading=Stock Quotes saved in DB.
+stock.ticker=TickerSymbol
+stock.quote=Quote
+stock.created.date=CreatedDate
+stock.last.updated.date=LastUpdatedDate
+
