Final commit : All work done for stock exercise.

--- a/Stock/src/main/resources/ApplicationResources.properties
+++ b/Stock/src/main/resources/ApplicationResources.properties
@@ -193,4 +193,7 @@ stock.ticker=TickerSymbol
 stock.quote=Quote
 stock.created.date=CreatedDate
 stock.last.updated.date=LastUpdatedDate
+stock.fetched.quote=Yahoo says {0} 
+stock.invalid.ticker=Yahoo says {0} Invalid ticker symbol.
+stock.yahoo.connection.problem=Problem talking to Yahoo Stock Service.Check your internet connection!!.
 
